dataset1235/2025-2/2947369575/users/3176888201/executions/1003782500_2819779400.log
== SUBMISSION (2025-09-01 22:28:35)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y*Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:29:34)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo1 = X*Y+Z

print(round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:29:01)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y+Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:35)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo1 = X*Y+Z

print(round(calculo1,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.6
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:29:14)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y+Z

print(round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(calculo1,1))
                ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:28:59)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y+Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:28:58)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y+Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:28:34)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y*Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:02)
-- CODE: 
X = float (input())
Y = float (input())
Z = float (input())

calculo = X*Y+Z

print (round(calculo1,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (round(calculo1,1))
                 ^^^^^^^^
NameError: name 'calculo1' is not defined. Did you mean: 'calculo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
